# vgce

./: .clang-format  CMakeLists.txt  LICENSE  README.md
src/: concurrent_queue.hpp  main.cpp
src/core/: application.cpp  application.hpp
src/model/: search_tree.cpp  search_tree.hpp
src/process/: process.hpp
src/process/platform/: process_linux.cpp  process_windows.cpp
src/tui/: renderer.cpp  renderer.hpp
src/uci/: uci_client.cpp  uci_client.hpp  uci_data.hpp  uci_parser.hpp
